[TagPreview] Fix textarea alignment

--- a/app/javascript/src/styles/specific/posts.scss
+++ b/app/javascript/src/styles/specific/posts.scss
@@ -160,6 +160,7 @@ div#c-posts {
     }
 
     textarea {
+      box-sizing: border-box;
       margin-bottom: 0.25em;
     }
 
